Modificacion rutina espalda + img

--- a/espalda.html
+++ b/espalda.html
@@ -99,45 +99,63 @@
         <section>
             <h1>¿Por qué es importante ejercitar la espalda?</h1>
             <p>
-                Fortalecer la espalda para un buen rendimiento y evitar lesiones es fundamental. Este es uno de los
+                Fortalecer la espalda para un rendimiento mayor en general y evitar lesiones en ella es la clave. Este es uno de los
                 grupos musculares más grandes y sobre el mismo recae parte de la actividad, tanto diaria como deportiva.
+                
             </p>
             <h3>Por este motivo de te dejamos una rutina para que entrenes esa espaldota carnal.</h3>
             <ul>
                 <li>
-                    <h4>Peso muerto x 10,8 1B. Dominada a la barbilla con peso x 4RM, 8RM.</h4>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/WV06PfRAXUk"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                    <h4>Comenzamos con un calentamiento.</h4>
+                    <p>Realizamos abdominales con la rueda 4x10. <br> ("4" nos referimos al numero de series, mientras
+                        que "10" la cantidad de repeteciones que vamos a realizar en cada serie, utilizaremos esta
+                        sintaxis para todos los ejercicios)</p>
+                    <img src="img/Rutinas/rueda-abdominal.jpg" alt="">
+                    <p>Todavia no es hora del descanso! Continuamos con espinales. Haremos el famoso "Superman" tambien
+                        4x10</p>
+                    <img src="img/Rutinas/espinalesSuperman.jpg" alt="">
+                    <p>¡Ahora si descansamos 30 segundos! volvemos a realizar este circuito hasta completar las 4
+                        series.</p>
                 </li>
                 <li>
-                    <h4>Remo muerto con barra (12RM) - 2-3 x 8-10 .</h4>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qsbJcaAneaw"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                    <h2>Una vez nuestro core este caliente comenzamos con Espalda</h2>
+                    <h4>Jalon al pecho 4x10</h4>
+                    <p>Este ejercicio es fundamental para una espalda firme y sin problemas vertebrales. Si eres principiante no te exigas
+                        demasiado, pon un peso con el cual puedas manejar las 40 repeteciones. <br> No debes llegar
+                        fatigado a la ultima serie ya que la rutina no termina en este ejercicio! <br> Este tip de
+                        "autoregular" los pesos. Es fundamental para la progresion y no lesionarnos. Utilizalo en todos
+                        los ejercicios.</p>
+                    <img src="img/Rutinas/Jalón-al-pecho.jpg" alt="">
                 </li>
                 <li>
-                    <h4>Remo alto de cable con un brazo alternado O Jalón hacia abajo balanceando - 2-3 x 10-12.</h4>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/WczI8ugTPl8"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                    <h4>Remo con barra 3x10</h4>
+                    <p>Agarramos la barra (como se muestra en la img) y la jalamos hacia nosotros, la tecnica en este
+                        ejercicio es fundamental, debido a la carga generada en nuestra lumbar. Si sentimos pinchazos o
+                        dolor en nuestra columna estamos realizando mal el ejercicio! Consulta con el entrenador de
+                        turno para perfeccionar el movimiento y evitar lesiones.</p>
+                    <img src="img/Rutinas/Remada-com-barra.jpg" alt="">
                 </li>
                 <li>
-                    <h4>Híper Y/W Combo - 2 x 14-20 (alterna Y/W en cada repetición) .</h4>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/uzveWBGBTWQ"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                    <h4>Remo en polea baja 4x8</h4>
+                    <p>Este ejercicio al realizarlo en maquina no necesita tanta perfeccion en base a tecnica. Si
+                        mantenemos nuestra espalda recta/semi-recta en todo el recorrido, nos evitaremos posibles
+                        dolores por mala postura.</p>
+                    <img src="img/Rutinas/remo-en-polea-baja.jpg" alt="">
                 </li>
                 <li>
-                    <h4>Encogimiento con barra escalonado - 1 x F.</h4>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/82b2wTNA9PM"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen></iframe>
+                    <h2>¡Terminamos con espalda! Ahora biceps</h2>
+                    <h3>Curl con barra 3x10</h3>
+                    <p>Mantenemos una postura erguida no excesiva y realizamos las series especificadas. No debemos pendulearnos si no llegamos al peso, ¡le bajamos! no necesitamos llamar la atencion de nadie, estamos enfocandonos en nosotros mismos. Un leve penduleo se puede cuando alcanzamos la 4ta serie, vamos por la 8va repetición y necesitamos ese empujoncito para llegar al objetivo.</p>
+                    <img src="img/Rutinas/biceps-con-barra.jpg" alt="">
+                </li>
+                <li>
+                    <h3>Curl martillo con mancuernas 3x8</h3>
+                    <p>Similar al ejercicio anterior pero con un agarre distinto y con mancuernas. Posturalmente lo mismo y el penduleo no es opcion aca.</p>
+                    <img src="img/Rutinas/biceps-martillo.jpg" alt="">
+                </li>
+                <li>
+                    <h3>Curl concentrado con mancuernas 3x8</h3>
+                    <img src="img/Rutinas/biceps-concentrado.jgp.webp" alt="">
                 </li>
             </ul>
         </section>
@@ -183,6 +201,7 @@
             </div>
         </section>
     </main>
+
 </body>
 
 </html>
