--- a/gimnasio.html
+++ b/gimnasio.html
@@ -94,7 +94,30 @@
         <div class="portada">
             <img src="img/gimnasio.jpg" alt="imagen1" class="img-cover">
         </div>
+<div>
+    <h1>El gimnasio: el mejor camino hacia una salud optima, tanto mental como fisica.</h1>
+    <p>En el camino hacia la transformación física, la autoregulación de pesos es clave. Acordate, no se trata
+        solo de levantar más y más peso, sino de hacerlo de manera inteligente y segura. Escucha tu cuerpo y
+        respétalo. Si no ¡te lesionas! y te alejas de tus objetivos. <br>
 
+        El verdadero disfrute se encuentra en el proceso, en cada repetición, en cada gota
+        que surge de nuestro sufrimiento. No te vuelvas loco buscando resultados inmediatos, enfocate en el esfuerzo constante y la
+        dedicación diaria. El progreso real no se mide solo en números, sino en tu capacidad para superarte a ti
+        mismo día tras día. <br>
+
+        A veces es necesario bajar los pesos, ya sea para permitir que tu cuerpo se recupere
+        adecuadamente o para trabajar en la técnica y la resistencia. ¡No te pongas bajon!, esto no
+        significa que estas estancado. Es una estrategia para no sobreexigir los musculos y obtener mejores resultados a la larga. <br>
+
+        Dar toda la energía al primer ejercicio de tu rutina puede ser contraproducente.
+        Al repartir tu energía de manera equilibrada a lo largo del entrenamiento, vas a estar motivado
+        y con ganas de completar toda tu rutina diaria. No tires la toalla antes de tiempo, cada ejercicio cuenta y te
+        acerca más a tus metas.
+
+        Así que mantén tu mente enfocada, escucha a tu cuerpo, disfruta cada paso del proceso y recuerda que el
+        verdadero éxito radica en tu determinación y en tu capacidad para superar los desafíos que se te
+        presenten. ¡Sigue adelante y alcanza tu mejor versión en el gimnasio y fuera de él!</p>
+</div>
         <section class="disciplinas">
             <div>
                 <h1>Rutina de hipertrofia - Volumen:</h1>
@@ -102,7 +125,7 @@
             <div class="actividades">
                 <article class="actividad">
                     <a href="espalda.html">
-                        <h2 class="disciplina" class="disciplina">Espaldovich</h2><img src="img/espalda.jpg" alt=""
+                        <h2 class="disciplina" class="disciplina">Espalda + Biceps</h2><img src="img/espalda.jpg" alt=""
                             class="img-ejercicio">
                     </a>
                 </article>
