rutina funcional + fotos + cambios varios

--- a/calistenia.html
+++ b/calistenia.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/lightDark.css">
+    <link rel="stylesheet" href="css/disciplinas.css">
     <title>Sanus Vita</title>
     <script defer src="js/darkMode.js"></script>
     <script defer src="js/header.js"></script>
@@ -105,9 +106,9 @@
         </div>
 
         <section class="disciplinas">
-            <div>
+            <!-- <div>
                 <h1>Rutina de Calistenia:</h1>
-            </div>
+            </div> -->
             <div class="actividades">
                 <article class="actividad">
                     <a @click="view = 'principiante' ">
