--- a/gimnasio.html
+++ b/gimnasio.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/lightDark.css">
+    <link rel="stylesheet" href="css/disciplinas.css">
     <title>Sanus Vita</title>
     <script defer src="js/darkMode.js"></script>
     <script defer src="js/header.js"></script>
