Actualizacion ejercicios gimnasio + JS + Img

--- a/gimnasio.html
+++ b/gimnasio.html
@@ -118,7 +118,7 @@
 
         A veces es necesario bajar los pesos, ya sea para permitir que tu cuerpo se recupere
         adecuadamente o para trabajar en la técnica y la resistencia. ¡No te pongas bajon!, esto no
-        significa que estas estancado. Es una estrategia para no sobreexigir los musculos y obtener mejores resultados a la larga. <br>
+        significa que estas estancado. Es una estrategia para no sobreexigir los musculos y obtener mejores resultados a la larga. <br> <br>
 
         Dar toda la energía al primer ejercicio de tu rutina puede ser contraproducente.
         Al repartir tu energía de manera equilibrada a lo largo del entrenamiento, vas a estar motivado
@@ -131,9 +131,15 @@
 </div>
         <section class="disciplinas">
             <div>
-                <h1>Rutina de hipertrofia - Volumen:</h1>
+                <h1>Rutina para hipertrofia - Volumen:</h1>
             </div>
             <div class="actividades">
+                <article class="actividad">
+                    <a @click="view = 'calentamiento' ">
+                        <h2 class="disciplina" class="disciplina">Calentamiento</h2><img src="img/calentamiento.jpg" alt=""
+                            class="img-ejercicio">
+                    </a>
+                </article>
                 <article class="actividad">
                     <a @click="view = 'espalda' ">
                         <h2 class="disciplina" class="disciplina">Espalda + Biceps</h2><img src="img/espalda.jpg" alt=""
@@ -142,29 +148,16 @@
                 </article>
                 <article class="actividad">
                     <a @click="view = 'pecho' ">
-                        <h2 class="disciplina" class="disciplina">Pechardo</h2><img src="img/press-de-banco-plano.jpg" alt=""
+                        <h2 class="disciplina" class="disciplina">Pecho + Triceps</h2><img src="img/press-de-banco-plano.jpg" alt=""
                             class="img-ejercicio">
                     </a>
                 </article>
                 <article class="actividad">
                     <a @click="view = 'piernas' ">
-                        <h2 class="disciplina" class="disciplina">Piernovich</h2><img src="img/espalda.jpg" alt=""
+                        <h2 class="disciplina" class="disciplina">Piernas + Hombros</h2><img src="img/piernas.jpg" alt=""
                             class="img-ejercicio">
                     </a>
                 </article>
-                <article class="actividad">
-                    <a @click="view = 'biceps' ">
-                        <h2 class="disciplina" class="disciplina">Biceps</h2><img src="img/espalda.jpg" alt=""
-                            class="img-ejercicio">
-                    </a>
-                </article>
-                <article class="actividad">
-                    <a @click="view = 'triceps' ">
-                        <h2 class="disciplina" class="disciplina">Triceps</h2><img src="img/espalda.jpg" alt=""
-                            class="img-ejercicio">
-                    </a>
-                </article>
-
 
             </div>
 
