Actualice todos los footer y sume direccion del gym

--- a/contacto.html
+++ b/contacto.html
@@ -159,7 +159,7 @@
                         info@sanusvita.com
                         <br><br>
                         Gimnasio central <br>
-                        PONER DIRECCIÓN DE UNA CALLE
+                        Guatemala 4641
 
                     </p>
                 </span>
@@ -244,9 +244,8 @@
             </li>
         </ul>
         <div class="legal-stuff">
-            <span>Copyright © 2007</span>
-            <a href="">Terms of Use</a>
-            <a href="">Privacy Policy</a>
+            <span>Copyright © 2023</span>
+            <a href="">Terminos y condiciones</a>
         </div>
     </footer>
 </body>
