--- a/index.html
+++ b/index.html
@@ -234,9 +234,8 @@
             </li>
         </ul>
         <div class="legal-stuff">
-            <span>Copyright © 2007</span>
-            <a href="">Terms of Use</a>
-            <a href="">Privacy Policy</a>
+            <span>Copyright © 2023</span>
+            <a href="">Terminos y condiciones</a>
         </div>
     </footer>
 </body>
