--- a/nosotros.html
+++ b/nosotros.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/lightDark.css">
+    <link rel="stylesheet" href="css/nosotros.css">
     <title>Sanus Vita</title>
     <script defer src="js/darkMode.js"></script>
     <script defer src="js/header.js"></script>
@@ -122,48 +123,86 @@
         </section>
         <section class="fundamentos">
             <article class="fundamento">
-                <ul> Queremos que nuestros usuarios:
-                    <li>Puedan encontrar una mejora en su vida.</li>
-                    <li>Logren cumplir sus metas personales</li>
-                    <li>Encuentren satisfacción en cada decisión tomada.</li>
+                <ul>
+                    <h2>Queremos que nuestros usuarios:</h2>
+                    <li>
+                        <p>Puedan encontrar una mejora en su vida.</p>
+                    </li>
+                    <li>
+                        <p>Logren cumplir sus metas personales</p>
+                    </li>
+                    <li>
+                        <p>Encuentren satisfacción en cada decisión tomada.</p>
+                    </li>
                 </ul>
             </article>
-            <article class="fundamento" id="unicofundamento">
-                <ul>Objetivos:
-                    <li>Capaticación continua de nuestro personal.</li>
-                    <li>Brindar un amplio abanico de actividades, entrenamientos para todos nuestros usuarios.</li>
-                    <li>Acompañar al usuario en su desarrollo.</li>
+            <article class="fundamento unicofundamento">
+                <ul>
+                    <h2>Objetivos:</h2>
+                    <li>
+                        <p>Capaticación continua de nuestro personal.</p>
+                    </li>
+                    <li>
+                        <p>Brindar un amplio abanico de actividades, entrenamientos para todos nuestros usuarios.</p>
+                    </li>
+                    <li>
+                        <p>Acompañar al usuario en su desarrollo.</p>
+                    </li>
                 </ul>
             </article>
             <article class="fundamento">
-                <ul>Visión <br>
-                    Nuestra visión es ser "El mejor sitio web deportivo". Nuestros pilares:
-                    <li>Promocionar la salud.</li>
-                    <li>Calidad y profesionalismo, tanto en instructores como en nuestra interfaz.</li>
-                    <li>Cumplir los objetivos de nuestros clientes.</li>
+                <ul>
+                    <h2>Visión</h2>
+                    <li>
+                        <p>Nuestra visión es ser "El mejor sitio web deportivo". Nuestros pilares:</p>
+                    </li>
+                    <li><p>Promocionar la salud.</p></li>
+                    <li><p>Calidad y profesionalismo, tanto en instructores como en nuestra interfaz.</p></li>
+                    <li><p>Cumplir los objetivos de nuestros clientes.</p></li>
                 </ul>
             </article>
         </section>
         <section class="historia">
-            <br>
-            <h3>Nuestra Historia:</h3>
-            <p>
-                Nacimos el 11 de septiembre 2007, con una simple plataforma y hoy nos encontramos próximos a
-                inagurar gimnasios en ciudades importantes de nuestro país.
-                <br><br>
-                Esta fue nuestra evolución <br>
-                En agosto del año 2008 pudimos contratar profesionales instructores en el area de musculación. <br>
-                En enero de 2009 se incorporaron más categorias con profesionales a su cargo tales como: funcional
-                y calistenia. <br>
-                En octubre de 2019 expertos en powerlifting se sumaron a nuestra familia. <br>
-                En 2020, año de pandemia, supimos mejorar y reinventarnos para lograr una estabilidad en nuestros
-                usuarios. Psicólogos y nutricionistas se unieron a nosotros y supimos mantener un trato más
-                entrañable con nuestros usuarios. <br>
-                En noviembre del año 2021 logramos inagurar nuestro primer gimnasio en Buenos Aires logrando
-                concretar lo que alguna vez soñamos desde que conocimos este hermoso mundo del entrenamiento, vida y
-                hábitos saludables. <br>
-            </p>
-        </section>
+            <ul>
+              <li>
+                <div>
+                  <p><time>2007</time> Nacimos el 11 de septiembre 2007, con una simple plataforma y hoy nos encontramos próximos a
+                    inagurar gimnasios en ciudades importantes de nuestro país.</p>
+                </div>
+              </li>
+              <li>
+                <div>
+                    <p>
+                        <time>2008</time> En agosto del año 2008 pudimos contratar profesionales instructores en el area de musculación.</p>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <p><time>2009</time> En enero de 2009 se incorporaron más categorias con profesionales a su cargo tales como: funcional
+                    y calistenia. </p>
+                </div>
+              </li>
+              <li>
+                <div><p>
+                    <time>2019</time> En octubre de 2019 expertos en powerlifting se sumaron a nuestra familia. </p>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <p><time>2020</time> En el año de pandemia, supimos mejorar y reinventarnos para lograr una estabilidad en nuestros
+                    usuarios. Psicólogos y nutricionistas se unieron a nosotros y supimos mantener un trato más
+                    entrañable con nuestros usuarios. </p>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <p><time>2021</time> En noviembre del año 2021 logramos inagurar nuestro primer gimnasio en Buenos Aires logrando
+                    concretar lo que alguna vez soñamos desde que conocimos este hermoso mundo del entrenamiento, vida y
+                    hábitos saludables. </p>
+                </div>
+              </li>
+            </ul>
+          </section>
 
     </main>
 
@@ -172,13 +211,17 @@
             <div class="logo"></div>
         </div>
         <ul class="f-section d-list">
-            <li><p>Nuestras disciplinas</p></li>
+            <li>
+                <p>Nuestras disciplinas</p>
+            </li>
             <li><a href="gimnasio.html" class="f-link">Gimnasio</a></li>
             <li><a href="funcional.html" class="f-link">Funcional</a></li>
             <li><a href="calistenia.html" class="f-link">Calistenia</a></li>
         </ul>
         <ul class="f-section adopt-list">
-            <li><p>Entrena con nosotros!</p></li>
+            <li>
+                <p>Entrena con nosotros!</p>
+            </li>
             <li><a href="nosotros.html" class="f-link">Sobre nosotros</a></li>
             <li><a href="contacto.html" class="f-link">Contacto</a></li>
         </ul>
@@ -197,21 +240,21 @@
             </div>
         </div>
         <ul class="f-section social-media">
-            <li><p>Seguinos:</p></li>
+            <li>
+                <p>Seguinos:</p>
+            </li>
             <li><a href="">
                     <svg class="icon-social-facebook" xmlns="http://www.w3.org/2000/svg"
-                        class="icon icon-tabler icon-tabler-brand-facebook" viewBox="0 0 24 24"
-                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round">
+                        class="icon icon-tabler icon-tabler-brand-facebook" viewBox="0 0 24 24" stroke-width="2"
+                        stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
                     </svg>
                 </a>
             </li>
             <li><a href=""><svg class="icon-social-instagram" xmlns="http://www.w3.org/2000/svg"
-                        class="icon icon-tabler icon-tabler-brand-instagram" viewBox="0 0 24 24"
-                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round">
+                        class="icon icon-tabler icon-tabler-brand-instagram" viewBox="0 0 24 24" stroke-width="2"
+                        stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z"></path>
                         <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
@@ -220,9 +263,8 @@
             <li>
                 <a href="">
                     <svg class="icon-social-twitter" xmlns="http://www.w3.org/2000/svg"
-                        class="icon icon-tabler icon-tabler-brand-twitter" viewBox="0 0 24 24"
-                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round">
+                        class="icon icon-tabler icon-tabler-brand-twitter" viewBox="0 0 24 24" stroke-width="2"
+                        stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path
                             d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c0 -.249 1.51 -2.772 1.818 -4.013z">
@@ -233,9 +275,8 @@
             <li>
                 <a href="">
                     <svg class="icon-social-youtube" xmlns="http://www.w3.org/2000/svg"
-                        class="icon icon-tabler icon-tabler-brand-youtube" viewBox="0 0 24 24"
-                        stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-                        stroke-linejoin="round">
+                        class="icon icon-tabler icon-tabler-brand-youtube" viewBox="0 0 24 24" stroke-width="2"
+                        stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M3 5m0 4a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v6a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z"></path>
                         <path d="M10 9l5 3l-5 3z"></path>
@@ -248,6 +289,7 @@
             <a href="">Terminos y condiciones</a>
         </div>
     </footer>
+    <script src="js/nosotros.js"></script>
 </body>
 
 </html>
