--- a/funcional.html
+++ b/funcional.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/lightDark.css">
     <link rel="stylesheet" href="css/disciplinas.css">
     <title>Sanus Vita</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="img/ico.png"">
     <script defer src="js/darkMode.js"></script>
     <script defer src="js/header.js"></script>
 </head>
