Agrego CRUD Python

--- a/nosotros.html
+++ b/nosotros.html
@@ -130,8 +130,8 @@
             </article>
             <article class="fundamento" id="unicofundamento">
                 <ul>Objetivos:
-                    <li>Capaticación continua de nuestro personal.</li>
-                    <li>Brindar un amplio abanico de actividades, entrenamientos para todos nuestros usuarios.</li>
+                    <li>Capacitar de forma continua a nuestro personal.</li>
+                    <li>Brindar un amplio abanico de actividades y entrenamientos para todos nuestros usuarios.</li>
                     <li>Acompañar al usuario en su desarrollo.</li>
                 </ul>
             </article>
