--- a/calistenia.html
+++ b/calistenia.html
@@ -24,7 +24,7 @@
 
     <main id="app">
         <div class="portada">
-            <img src="img/calistenia.webp" alt="imagen1" class="img-cover">
+            <img src="img/calis.webp" alt="imagen1" class="img-cover">
         </div>
 
         <section class="disciplinas">
