--- a/gimnasio.html
+++ b/gimnasio.html
@@ -25,7 +25,9 @@
 
     <main id="app">
         <div class="portada">
-            <img src="img/gimnasio.webp" alt="imagen1" class="img-cover">
+            <div class="portada-img">
+                <img src="img/gim.webp" alt="imagen1" class="img-cover">
+            </div>
         </div>
         <section>
             <div>
