--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
             <div class="actividades">
                 <article class="actividad">
                     <a href="gimnasio.html">
-                        <img src="img/gimnasio.png" alt="" class="img-actividad">
+                        <img src="img/gimnasio.webp" alt="" class="img-actividad">
                         <h3 class="disciplina">Gimnasio</h3>
                     </a>
                 </article>
                 <article class="actividad">
                     <a href="funcional.html">
-                        <img src="img/funcional.png" alt="" class="img-actividad">
+                        <img src="img/funcional.webp" alt="" class="img-actividad">
                         <h3 class="disciplina">Funcional</h3>
                     </a>
                 </article>
                 <article class="actividad">
                     <a href="calistenia.html">
-                        <img src="img/calistenia.png" alt="" class="img-actividad">
+                        <img src="img/calistenia.webp" alt="" class="img-actividad">
                         <h3 class="disciplina">Calistenia</h3>
                     </a>
                 </article>
