--- a/tienda.html
+++ b/tienda.html
@@ -27,10 +27,54 @@
                     <img src="img/calistenia-sentadillas.webp" alt="">
                     <div class="card-txt">
                         <h3>Suplementos</h3>
+                        <h2>Proteina</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
+                        <h1>$9449,99</h1>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/calistenia-sentadillas.webp" alt="">
+                    <div class="card-txt">
+                        <h3>Suplementos</h3>
                         <h2>creatina</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
                         <h1>$9449,99</h1>
-                        
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/calistenia-sentadillas.webp" alt="">
+                    <div class="card-txt">
+                        <h3>Suplementos</h3>
+                        <h2>BCCA</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
+                        <h1>$9449,99</h1>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/calistenia-sentadillas.webp" alt="">
+                    <div class="card-txt">
+                        <h3>Suplementos</h3>
+                        <h2>MutanMass</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
+                        <h1>$9449,99</h1>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/calistenia-sentadillas.webp" alt="">
+                    <div class="card-txt">
+                        <h3>Suplementos</h3>
+                        <h2>QuemaGrasas</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
+                        <h1>$9449,99</h1>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/calistenia-sentadillas.webp" alt="">
+                    <div class="card-txt">
+                        <h3>Suplementos</h3>
+                        <h2>Tembolona</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
+                        <h1>$9449,99</h1>
                     </div>
                 </div>
             </div>
