--- a/tienda.html
+++ b/tienda.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,72 +20,99 @@
 <body>
     <header class="" id="idheader">
     </header>
-    
+
     <main>
         <section>
             <div class="wrapper">
-                <div class="card">
-                    <img src="img/calistenia-sentadillas.webp" alt="">
+                <div class="card" v-for="suplemento in suplementos">                    
                     <div class="card-txt">
-                        <h3>Suplementos</h3>
-                        <h2>Proteina</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
-                        <h1>$9449,99</h1>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/calistenia-sentadillas.webp" alt="">
-                    <div class="card-txt">
-                        <h3>Suplementos</h3>
-                        <h2>creatina</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
-                        <h1>$9449,99</h1>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/calistenia-sentadillas.webp" alt="">
-                    <div class="card-txt">
-                        <h3>Suplementos</h3>
-                        <h2>BCCA</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
-                        <h1>$9449,99</h1>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/calistenia-sentadillas.webp" alt="">
-                    <div class="card-txt">
-                        <h3>Suplementos</h3>
-                        <h2>MutanMass</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
-                        <h1>$9449,99</h1>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/calistenia-sentadillas.webp" alt="">
-                    <div class="card-txt">
-                        <h3>Suplementos</h3>
-                        <h2>QuemaGrasas</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
-                        <h1>$9449,99</h1>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/calistenia-sentadillas.webp" alt="">
-                    <div class="card-txt">
-                        <h3>Suplementos</h3>
-                        <h2>Tembolona</h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo adipisci deleniti dicta a quos nemo veniam reiciendis error libero, ex nostrum doloremque incidunt similique minima consequatur saepe consectetur qui?</p>
-                        <h1>$9449,99</h1>
+                        <h3>Suplemento</h3>
+                        <h2>{{suplemento.nombre}}</h2>
+                        <p>{{suplemento.descripcion}}
+                            <br>Cantidad disponible: {{suplemento.cantidad}}
+                        </p>
+                        <h1>${{suplemento.precio}}</h1>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <footer id="idfooter">     
+    <footer id="idfooter">
     </footer>
-    <script defer src=" js/darkMode.js"></script>
+    <script defer src="js/darkMode.js"></script>
     <script defer src="js/header.js"></script>
     <script src="js/index.js"></script>
-</body>
+    <script src="https://unpkg.com/vue@next"></script>
+    <script>
+        const app = Vue.createApp({
+            data() {
+                return {
+                    suplementos: []
+                }
+            },
+            methods: {
+                obtenerSuplementos() {
+                    const URL = "https://evannj.pythonanywhere.com/"
+
+                    fetch(URL + 'suplementos')
+                        .then(response => {
+                            if (response.ok) {
+                                return response.json()
+                            } else {
+                                throw new Error('Error al obtener los suplementos.')
+                            }
+                        })
+                        .then(data => {
+                            this.suplementos = data
+                        })
+                        .catch(error => {
+                            console.log('Error:', error)
+                            alert('Error al obtener los suplementos.')
+                        })
+                }
+            },
+            mounted() {
+                this.obtenerSuplementos()
+            }
+        })
+        app.mount('body')
+
+
+
+
+
+
+        // const URL = "https://evannj.pythonanywhere.com/"
+        // Realizamos la solicitud GET al servidor para obtener todos los productos
+        // fetch(URL + 'suplementos')
+        //     .then(function (response) {
+        //         if (response.ok) {
+        //             return response.json() // Parseamos la respuesta JSON
+        //         } else {
+        //             throw new Error('Error al obtener los suplementos.')
+        //         }
+        //     })
+        //     .then(function (data) {
+        //         // var tablaProductos =
+        //         //     document.getElementById('tablaProductos')
+        //         // Iteramos sobre los productos y agregamos filas a la tabla
+        //         data.forEach(function (producto) {
+        //             var fila = document.createElement('tr')
+        //             fila.innerHTML = '<td>' + producto.codigo + '</td>' +
+        //                 '<td>' + producto.descripcion + '</td>' +
+        //                 '<td align="right">' + producto.cantidad + '</td>' +
+        //                 '<td align="right">&nbsp; &nbsp;&nbsp; &nbsp;' +
+        //                 producto.precio + '</td>'
+        //             tablaProductos.appendChild(fila)
+        //         })
+        //     })
+        //     .catch(function (error) {
+        //         console.log('Error:', error)
+        //         alert('Error al obtener los productos.')
+        //     })
+
+    </script>
+    </body>
+
 </html>
